grammar.js
    source_file: $ => repeat(choice(
        $.module_definition,
        $.script_block,
        $.address_block
    )),

    // AddressBlock = "address" <LeadingNameAccess> "{" (<Attributes> <Module>)* "}"
    address_block: $ => seq(
        'address',
        $._leading_name_access,
        '{',
        repeat($.module_definition),
        '}'
    ),

    _leading_name_access: $ => choice(
        $.address_literal,
        $.identifier
    ),

    // Script =
    //    "script" "{"
    //        (<Attributes> <UseDecl>)*
    //        (<Attributes> <ConstantDecl>)*
    //        <Attributes> <DocComments> <ModuleMemberModifiers> <FunctionDecl>
    //        (<Attributes> <SpecBlock>)*
    //    "}"
    script_block: $ => seq(
        optional($.attributes),
        'script',
        '{',
        repeat($.use_declaration),
        repeat($.constant_definition),
        $.function_definition,
        repeat($.spec_block),
        '}'
    ),

    // From syntax.rs: "module" <ModuleName> "{" ... "}"
    module_definition: $ => seq(
      optional($.attributes),
      'module',
      $.module_identity,
      '{',
      repeat($._module_member),
      '}'
    ),

    _module_member: $ => choice(
      $.use_declaration,
      $.friend_declaration,
      $.constant_definition,
      $.struct_definition,
      $.enum_definition,
      $.function_definition,
      $.spec_block
    ),

    // ConstantDecl = "const" <Identifier> ":" <Type> "=" <Exp> ";"
    constant_definition: $ => seq(
        optional($.attributes),
        'const',
        $.identifier,
        ':',
        $.type,
        '=',
        $.expression,
        ';'
    ),

    // FriendDecl = "friend" <NameAccessChain> ";"
    friend_declaration: $ => seq(
        optional($.attributes),
        'friend',
        $.module_access,
        ';'
    ),

    // EnumDecl =
    //    ( "public" )? "enum" <EnumDefName> ( <TypeParameters> )?
    //    ( "has" <Ability> (, <Ability>)+ )?
    //    "{" <EnumVariants> "}"
    //    ( "has" <Ability> (, <Ability>)+ )?
    enum_definition: $ => seq(
      optional($.attributes),
      optional($.visibility_modifier),
      'enum',
      $.identifier,
      optional($.type_parameters),
      optional($.abilities),
      '{',
      commaSep($.enum_variant),
      '}',
      optional($.postfix_abilities)
    ),

    enum_variant: $ => seq(
      optional($.attributes),
      $.identifier,
      optional(choice(
        $.struct_fields,
        $.positional_fields
      ))
    ),

    // FunctionDecl =
    //    [ "inline" ] "fun"
    //    <FunctionDefName> "(" Comma<Parameter> ")"
    //    (":" <Type>)?
    //    ("acquires" <NameAccessChain> ("," <NameAccessChain>)*)?
    //    ("{" <Sequence> "}" | ";")
    function_definition: $ => seq(
        optional($.attributes),
        // Modifiers: native, visibility, entry
        optional($.native_modifier),
        optional($.visibility_modifier),
        optional($.entry_modifier),
        optional($.inline_modifier),
        'fun',
        $.identifier,
        optional($.type_parameters),
        $.function_parameters,
        optional($.ret_type),
        repeat($.access_specifier), // acquires, reads, writes, pure
        choice($.block, ';')
    ),

    native_modifier: $ => 'native',
    function_parameters: $ => seq(
        '(',
        commaSep($.function_parameter),
        ')'
    ),

    function_parameter: $ => seq(
        $.identifier,
        ':',
        $.type
    ),

    block: $ => seq(
        '{',
        repeat($.use_declaration),
        repeat($._statement),
        optional($.expression),
        '}'
    ),

    use_declaration: $ => seq(
        optional($.attributes),
        'use',
        choice(
            seq($.module_access, '::', '*'),
            $.module_access
        ),
        optional(choice(
            seq('as', $.identifier),
            seq('::', $.use_group)
        )),
        ';'
    ),

    _statement: $ => seq(
        choice(
            $.let_statement,
            $.expression
        ),
        ';'
    ),

    expression: $ => choice(
        $.address_expression,
        $.bool_literal,
        $.byte_string_literal,
        $.vector_literal,
        $.module_access_expr,
        $.num_literal,
        $.block,
        $.tuple_expression,
        $.if_expression,
        $.while_expression,
        $.loop_expression,
        $.for_expression,
        $.return_expression,
        $.abort_expression,
        $.break_expression,
        $.continue_expression,
        $.match_expression,
        $.lambda_expression,
        $.unary_expression,
        $.dereference_expression,
        $.borrow_expression,
        $.binary_expression,
        $.assignment_expression,
        $.compound_assignment_expression,
        $.call_expression,
        $.vector_access_expression,
        $.dot_expression,
        $.cast_expression,
        $.type_test_expression,
        $.quantifier_expression,
        $.spec_block
    ),

    unary_expression: $ => prec(PREC.unary, seq(
        choice('!', '-', 'copy', 'move'),
        $.expression
    )),

    dereference_expression: $ => prec(PREC.unary, seq(
        '*',
        $.expression
    )),

    borrow_expression: $ => prec(PREC.unary, seq(
        choice('&', '&mut'),
        $.expression
    )),

    binary_expression: $ => choice(
        prec.left(PREC.mult, seq($.expression, choice('*', '/', '%'), $.expression)),
        prec.left(PREC.add, seq($.expression, choice('+', '-'), $.expression)),
        prec.left(PREC.shift, seq($.expression, choice('<<', '>>'), $.expression)),
        prec.left(PREC.bit_and, seq($.expression, '&', $.expression)),
        prec.left(PREC.bit_xor, seq($.expression, '^', $.expression)),
        prec.left(PREC.bit_or, seq($.expression, '|', $.expression)),
        prec.left(PREC.range, seq($.expression, '..', $.expression)),
        prec.left(PREC.eq, seq($.expression, choice('==', '!=', '<', '>', '<=', '>='), $.expression)),
        prec.left(PREC.and, seq($.expression, '&&', $.expression)),
        prec.left(PREC.or, seq($.expression, '||', $.expression)),
        prec.right(PREC.spec_implies, seq($.expression, '==>', $.expression)),
        prec.left(PREC.spec_implies, seq($.expression, '<==>', $.expression))
    ),

    assignment_expression: $ => prec.right(PREC.assign, seq(
        $.expression,
        '=',
        $.expression
    )),

    cast_expression: $ => prec.left(PREC.cast, seq(
        $.expression,
        'as',
        $.type
    )),

    call_expression: $ => prec(PREC.call, seq(
        $.module_access_expr,
        $.arg_list
    )),

    arg_list: $ => seq(
        '(',
        commaSep($.expression),
        ')'
    ),

    vector_access_expression: $ => prec(PREC.call, seq(
        $.expression,
        '[',
        $.expression,
        ']'
    )),

    dot_expression: $ => prec(PREC.field, seq(
        $.expression,
        '.',
        $.identifier
    )),

    vector_literal: $ => seq(
        'vector',
        optional($.type_arguments),
        '[',
        commaSep($.expression),
        ']'
    ),

    tuple_expression: $ => seq(
        '(',
        commaSep($.expression),
        ')'
    ),

    module_access_expr: $ => $.module_access,

    num_literal: $ => choice(
        $._hex_literal,
        seq($._hex_literal, $.num_suffix),
        /\d+(_\d+)*/,
        seq(/\d+(_\d+)*/, $.num_suffix)
    ),

    _hex_literal: $ => /0x[0-9a-fA-F]+(_[0-9a-fA-F]+)*/,

    address_literal: $ => $._hex_literal,

    struct_definition: $ => seq(
      optional($.attributes),
      optional($.native_modifier),
      optional($.visibility_modifier),
      'struct',
      $.identifier,
      optional($.type_parameters),
      choice(
        seq(
            optional($.abilities),
            $.struct_fields,
            optional($.postfix_abilities)
        ),
        seq(
            $.positional_fields,
            optional($.abilities),
            ';'
        ),
        seq(
            optional($.abilities),
            ';'
        )
      )
    ),

    struct_fields: $ => seq(
      '{',
      commaSep($.struct_field),
      '}'
    ),

    struct_field: $ => seq(
      $.identifier,
      ':',
      $.type
    ),

    positional_fields: $ => seq(
      '(',
      commaSep($.type),
      ')'
    ),

    type_parameters: $ => seq(
      '<',
      commaSep($.type_parameter),
      '>'
    ),

    type_parameter: $ => seq(
      optional('phantom'),
      $.identifier,
      optional($.type_constraint)
    ),

    type_constraint: $ => seq(
      ':',
      $.ability,
      repeat(seq('+', $.ability))
    ),

    abilities: $ => seq(
      'has',
      commaSep1($.ability)
    ),

    ability: $ => choice(
      'copy',
      'drop',
      'store',
      'key'
    ),

    type: $ => choice(
      $.primitive_type,
      $.module_access,
      $.ref_type,
      $.fun_type,
      $.tuple_type
    ),

    primitive_type: $ => choice(
      token(prec(1, 'u8')), token(prec(1, 'u16')), token(prec(1, 'u32')),
      token(prec(1, 'u64')), token(prec(1, 'u128')), token(prec(1, 'u256')),
      token(prec(1, 'i8')), token(prec(1, 'i16')), token(prec(1, 'i32')),
      token(prec(1, 'i64')), token(prec(1, 'i128')), token(prec(1, 'i256')),
      token(prec(1, 'bool')),
      token(prec(1, 'address')),
      token(prec(1, 'signer')),
      token(prec(1, 'vector'))
    ),

    module_access: $ => seq(
        optional(seq($.address_literal, '::')),
        optional(seq($.identifier, '::')),
        $.identifier,
        optional($.type_arguments)
    ),

    type_arguments: $ => seq(
        '<',
        commaSep($.type),
        '>'
    ),

    module_identity: $ => choice(
        seq($.address_literal, '::', $.identifier),
        seq($.identifier, '::', $.identifier),
        $.identifier
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
