test/corpus/operators.txt
==================
Operators and Calls
==================
module 0x1::Ops {
    fun t() {
        x = 1;
        *r = 2;
        x = y + z;
        x = y - z;
        x = y * z;
        x = y / z;
        x = y % z;
        x = y && z;
        x = y || z;
        x = y == z;
        x = y != z;
        x = y < z;
        x = y > z;
        x = y <= z;
        x = y >= z;
        x = y & z;
        x = y | z;
        x = y ^ z;
        x = y << z;
        x = y >> z;
        x = !y;
        x = *y;
        x = &y;
        x = &mut y;
        x = copy y;
        x = move y;
        call();
        call(1, 2);
        0x1::M::call<u64>(1);
        v[0];
        s.f;
        (x as u64);
        vector[1, 2];
    }
}

---

(source_file
  (module_definition
    (module_identity
      (address_literal)
      (identifier))
    (function_definition
      (identifier)
      (function_parameters)
      (block
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (num_literal))))
        (expression
          (assignment_expression
            (expression
              (dereference_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))
            (expression
              (num_literal))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (binary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (unary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (dereference_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (borrow_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (borrow_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (unary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (assignment_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (unary_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))))))
        (expression
          (call_expression
            (module_access_expr
              (module_access
                (identifier)))
            (arg_list)))
        (expression
          (call_expression
            (module_access_expr
              (module_access
                (identifier)))
            (arg_list
              (expression
                (num_literal))
              (expression
                (num_literal)))))
        (expression
          (call_expression
            (module_access_expr
              (module_access
                (address_literal)
                (identifier)
                (identifier)
                (type_arguments
                  (type
                    (primitive_type)))))
            (arg_list
              (expression
                (num_literal)))))
        (expression
          (vector_access_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (expression
              (num_literal))))
        (expression
          (dot_expression
            (expression
              (module_access_expr
                (module_access
                  (identifier))))
            (identifier)))
        (expression
          (tuple_expression
            (expression
              (cast_expression
                (expression
                  (module_access_expr
                    (module_access
                      (identifier))))
                (type
                  (primitive_type))))))
        (expression
          (vector_literal
            (expression
              (num_literal))
            (expression
              (num_literal))))))))
